# pv254-board-games-recommender

./: .gitattributes  README.md  datasets_link.txt
server/: .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: main.py
server/app/algorithms/: create_items_factors.py  create_similarity_matrix.py  latent_factors.py  tfidf.py
server/app/algorithms/latent_factors/: create_items_factors.py  latent_factors.py  load_latent_factors_matrices.py
server/app/algorithms/tfidf/: create_similarity_matrix.py  tfidf.py
server/app/db/: item_factors.pkl  items_factors.pkl  map_from_bgg_id_to_index.json
server/app/routers/: games_router.py  recommendations_router.py
server/app/types/: shared_types.py
server/app/utils/: get_games_by_name.py  get_latent_factors_recommendations.py  get_paged_games.py  load_factors.py  load_games_from_json.py  load_latent_factors_matrices.py  tfidf_related.py  universal_path.py
server/data/cleaned/: subcategories.csv
server/playground/jakub_kraus/: exploration_phase.ipynb  explore_phase.ipynb  preprocessing.ipynb
server/playground/matej_bukacek/: compute_similarity_score.py  cosine_similarity.ipynb  endpoints.py  tfidf.ipynb
server/playground/michal_salasek/: latent_factors.ipynb
server/playground/petr_janik/: baselines.ipynb
server/playground/petr_janik/exploration/: exploration.ipynb
server/playground/petr_janik/latent_factors/: baseline_comparison.ipynb  comparison_with_baseline.ipynb  comparison_with_baselines.ipynb
server/playground/petr_janik/recommendation_techniques/: 01_non_personalized.ipynb  (+3 more)
(+59 files in other folders)
