[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Petr Janik <peta.janik@email.cz>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pandas = "^1.5.3"
scipy = "^1.10.1"
scikit-learn = "^1.2.1"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
